--- a/ToDoList/wwwroot/css/site.css
+++ b/ToDoList/wwwroot/css/site.css
@@ -1,5 +1,4 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿
 
 a.navbar-brand {
   white-space: normal;
@@ -16,6 +15,9 @@ a {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+}
+.set-submit-button {
+    margin-top: 30px !important;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
